--- a/WeiXinDevelopDemo/appsettings.json
+++ b/WeiXinDevelopDemo/appsettings.json
@@ -1,8 +1,13 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WeiXinDevelopOption": {
+    "RedirectUri": "这是测试"
+
+  },
+  "RedirectUri": "sssssssss"
 }
