可以获取用户信息

--- a/WeiXinDevelopDemo/appsettings.json
+++ b/WeiXinDevelopDemo/appsettings.json
@@ -6,8 +6,8 @@
   },
   "AllowedHosts": "*",
   "WeiXinDevelopOption": {
-    "RedirectUri": "这是测试"
-
-  },
-  "RedirectUri": "sssssssss"
+    "RedirectUri": "http://zt588a.natappfree.cc/WeiXinWeb/RedirectPage",
+    "appId": "wx272fd0eccf8fb594",
+    "SecretKey": "5794fed4d5db64f78b0be997d1bb6b99"
+  }
 }
